fixed issue where extremely long words would overflow outside message bubble

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -102,7 +102,8 @@ small {
       line-height: 1.6em;
       font-size: 1.1em;
       position: relative;
-      box-shadow: 0 3px #ccc; }
+      box-shadow: 0 3px #ccc;
+      word-wrap: break-word; }
     .chat-container .messages .message:nth-child(2n) {
       width: 70%;
       margin-left: 20%; }
